syntax = "proto3";

package proto.dynamo.v1;

option go_package = "github.com/codeclout/AccountEd/storage";

import "dynamo/v1/messages.proto";

service DynamoDBStorageService {
  rpc FetchToken(FetchTokenRequest) returns (FetchTokenResponse);
  rpc StorePublicToken(TokenStoreRequest) returns (TokenStoreResponse);
  rpc StoreConfirmedRegistration(StoreConfirmedRegistrationRequest) returns (StoreConfirmedRegistrationResponse);
}